<resources>
    <string name="app_name">CircleLive</string>
    <string name="im_user_removed">当前账号已被移除</string>
    <string name="im_user_restricted">当前账号被限制登录</string>
    <string name="im_user_conflict">当前账号在其他设备登录</string>
    <string name="im_user_password_changed">当前账号密码已被修改</string>
    <string name="im_user_kick_by_other_devices">当前账号被其他设备踢下线</string>
    <string name="login">登录</string>
    <!-- Strings related to login -->
    <string name="invalid_username">非法用户名</string>
    <string name="invalid_password">密码最小密码长度为6个字符</string>
    <string name="login_failed">"登录失败"</string>
    <string name="login_username_hint">你的唯一账号</string>
    <string name="login_password_hint">你的登录密码，不要太短哦</string>
    <string name="logo_slogan">分享，遇见，Live</string>
    <string name="logo_slogan_desc">和最真的人Live</string>
    <string name="live">Live</string>
    <string name="live_permissin_denied">开启Live需要相机，麦克风和设备存储权限</string>
    <string name="front_camera">前置摄像头</string>
    <string name="back_camera">后置摄像头</string>
    <string name="external_camera">外部摄像头</string>
    <string name="ultrawide">广角镜头</string>
    <string name="live_start_error">开启Live失败</string>
    <string name="live_start_token_error">无法开启Live，无效Token</string>
    <string name="finish">结束</string>
    <string name="close">关闭</string>
    <string name="conversation">会话</string>
    <string name="posts">动态</string>
    <string name="create_post_hint">分享你的絮语</string>
    <string name="publish">发布</string>
    <string name="post_too_short">生活很多，内容太少</string>
    <string name="publish_post_error">发布动态失败</string>


    <string name="time_string_just_now">刚刚</string>
    <plurals name="time_string_minutes_ago">
        <item quantity="one">%1$d 分钟前</item>
        <item quantity="other">%1$d 分钟前</item>
    </plurals>
    <plurals name="time_string_hours_ago">
        <item quantity="one">%1$d 小时前</item>
        <item quantity="other">%1$d 小时前</item>
    </plurals>
    <plurals name="time_string_days_ago">
        <item quantity="one">%1$d 天前</item>
        <item quantity="other">%1$d 天前</item>
    </plurals>
    <plurals name="time_string_month_ago">
        <item quantity="one">%1$d 个月前</item>
        <item quantity="other">%1$d 个月前</item>
    </plurals>
    <plurals name="time_string_year_ago">
        <item quantity="one">%1$d 年前</item>
        <item quantity="other">%1$d 年前</item>
    </plurals>
    <plurals name="time_string_minutes_format">
        <item quantity="one">%1$d 分钟</item>
        <item quantity="other">%1$d 分钟</item>
    </plurals>
    <plurals name="time_string_hours_format">
        <item quantity="one">%1$d 小时</item>
        <item quantity="other">%1$d 小时</item>
    </plurals>
    <plurals name="time_string_days_format">
        <item quantity="one">%1$d 天</item>
        <item quantity="other">%1$d 天</item>
    </plurals>


    <plurals name="time_string_minutes_ago_short">
        <item quantity="one">%1$d分钟前</item>
        <item quantity="other">%1$d分钟前</item>
    </plurals>
    <plurals name="time_string_hours_ago_short">
        <item quantity="one">%1$d小时前</item>
        <item quantity="other">%1$d小时前</item>
    </plurals>
    <plurals name="time_string_days_ago_short">
        <item quantity="one">%1$d天</item>
        <item quantity="other">%1$d天</item>
    </plurals>
    <plurals name="time_string_weeks_ago_short">
        <item quantity="one">%1$d周</item>
        <item quantity="other">%1$d周</item>
    </plurals>

    <plurals name="time_string_minutes_ago_medium">
        <item quantity="one">%1$d分钟前</item>
        <item quantity="other">%1$d分钟前</item>
    </plurals>
    <plurals name="time_string_hours_ago_medium">
        <item quantity="one">%1$d小时前</item>
        <item quantity="other">%1$d小时前</item>
    </plurals>
    <plurals name="time_string_days_ago_medium">
        <item quantity="one">%1$d天前</item>
        <item quantity="other">%1$d天前</item>
    </plurals>

    <plurals name="time_string_minutes_ago_normal">
        <item quantity="one">%1$d分钟前</item>
        <item quantity="other">%1$d分钟前</item>
    </plurals>
    <plurals name="time_string_hours_ago_normal">
        <item quantity="one">%1$d小时前</item>
        <item quantity="other">%1$d小时前</item>
    </plurals>
    <plurals name="time_string_days_ago_normal">
        <item quantity="one">%1$d天前</item>
        <item quantity="other">%1$d天前</item>
    </plurals>

    <string name="time_string_second">秒</string>
    <string name="time_string_minute">分钟</string>
    <string name="time_string_hour">小时</string>
    <string name="write_something">写些什么...</string>
    <string name="add_friend_invite">添加好友请求</string>
    <string name="common_send_success">发送成功</string>
    <string name="notify">通知</string>
    <string name="more">更多</string>
    <string name="accept">同意</string>
    <string name="had_handle">已处理</string>
    <string name="logout">退出登录</string>
    <string name="filter">滤镜</string>
    <string name="me_page">个人主页</string>
    <string name="living_waiting">等待中...</string>
    <string name="live_channel_create_desc_hint">你可以分享更多你此刻的心情。</string>
    <string name="live_channel_create_title_hint">简短描述你的Live</string>
    <string name="publish_live">发布Live</string>
    <string name="live_channel_auto_living">发布成功后进入Live</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="okay">好的</string>
    <string name="living_filter_tips_title">很高兴你能来Live，用滤镜表达此刻的心情吧</string>
    <string name="living_filter_tips_subtitle">长按视频页面就可选择不同滤镜，拖动条可以改变强度，默认会记住你最后一次的选择。</string>
    <string name="try_this">试一试</string>
    <string name="live_channel_subscriber_limit_title">不能订阅此Live</string>
    <string name="live_channel_subscriber_limit_subtitle">你最多能同时订阅5个Live，订阅后会所有Live的所有动态消息。</string>
    <string name="live_channel_subscriber_success">已订阅，将收到Live的通知信息。</string>
    <string name="activity_clear_all">一键清理</string>
</resources>