<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_toolbar_notify"
        android:icon="@drawable/ic_notify"
        android:title="@string/notify"
        app:showAsAction="always" />

    <item
        android:id="@+id/main_toolbar_more"
        android:icon="@drawable/ic_regular_more"
        android:title="@string/more"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/main_toolbar_live_publish"
                android:title="@string/publish_live"
                />
            <item
                android:id="@+id/main_toolbar_my"
                android:title="@string/me_page"
                />
        </menu>
    </item>
</menu>