<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_white">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:navigationIconTint="@color/ui_white"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="发布Live"
        app:titleTextColor="@color/white" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_channel_cover"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:src="@drawable/default_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tv_channel_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_normal_input_r8"
        android:hint="@string/live_channel_create_title_hint"
        android:minHeight="40dp"
        android:padding="10dp"
        android:textColor="@color/textColorPrimary"
        android:textColorHint="@color/textColorSecondary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_channel_cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_channel_cover"
        app:layout_constraintTop_toTopOf="@id/iv_channel_cover" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tv_channel_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_normal_input_r8"
        android:gravity="start"
        android:hint="@string/live_channel_create_desc_hint"
        android:minHeight="80dp"
        android:padding="12dp"
        android:textColor="@color/textColorSecondary"
        android:textColorHint="@color/textColorSecondary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/iv_channel_cover"
        app:layout_constraintTop_toBottomOf="@id/iv_channel_cover"
        tools:text="神奇的小猫咪铲屎官" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_channel_desc">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/live_channel_auto_living"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_auto_live"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>